--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Israel Swimming Association Web Services",
   "main": "src/server.js",
   "scripts": {
+    "db-make-seed": "npx knex seed:make --env dev --knexfile ./server/db/knexfile.js",
+    "db-migrate": "npx knex migrate:latest --env dev --knexfile ./server/db/knexfile.js",
+    "db-seed": "npx knex seed:run --env dev --knexfile ./server/db/knexfile.js",
+    "db-down": "npx knex migrate:down --env dev --knexfile ./server/db/knexfile.js",
     "start": "nodemon src/server/server.js"
   },
   "repository": {
@@ -26,9 +30,11 @@
     "knex": "^1.0.3",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
+    "koa-joi-router": "^8.0.0",
     "koa-morgan": "^1.0.1",
     "koa-passport": "^4.1.4",
     "koa-session": "^6.2.0",
+    "objection": "^3.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3"
   },
