--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "enforce-node-path": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.3",
+    "knex-paginate": "^3.0.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-joi-router": "^8.0.0",
