--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "koa-morgan": "^1.0.1",
     "koa-passport": "^4.1.4",
     "koa-session": "^6.2.0",
+    "koa2-swagger-ui": "^5.5.1",
     "objection": "^3.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3"
