--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "koa2-swagger-ui": "^5.5.1",
     "objection": "^3.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "swagger-jsdoc": "^6.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
