--- a/src/server/services/swagger/definitions.yaml
+++ b/src/server/services/swagger/definitions.yaml
@@ -1,4 +1,5 @@
 definitions:
+  # Users Auth
   Login:
     required:
       - username
@@ -10,7 +11,14 @@ definitions:
         type: string
       path:
         type: string
+  # General
+  Status:
+    type: object
+    properties:
+      status:
+        type: string
 
+  # Announcements
   GeneralAnnouncements:
     type: array
     items:
