--- a/src/server/services/swagger/tags.yaml
+++ b/src/server/services/swagger/tags.yaml
@@ -1,3 +1,5 @@
 tags:
-  - name: Annoucements
+  - name: Announcements
     description: ISR Swimming Association announcements.
+  - name: UserAuthentication
+    description: User registration and login.
