--- a/src/server/services/swagger/components.yaml
+++ b/src/server/services/swagger/components.yaml
@@ -23,6 +23,14 @@ components:
           type: string
         password:
           type: string
+        age:
+          type: integer
+        city:
+          type: string
+        address:
+          type: string
+        zipcode:
+          type: string
         email:
           type: string
         id_number:
@@ -32,8 +40,52 @@ components:
         - first_name
         - last_name
         - password
+        - age
+        - city
+        - address
+        - zipcode
         - email
         - id_number
+
+    updateUserInfo:
+      type: object
+      properties:
+        username:
+          type: string
+        first_name:
+          type: string
+        last_name:
+          type: string
+        age:
+          type: integer
+        city:
+          type: string
+        address:
+          type: string
+        zipcode:
+          type: string
+
+    adminUpdateUserInfo:
+      type: object
+      properties:
+        username:
+          type: string
+        first_name:
+          type: string
+        last_name:
+          type: string
+        age:
+          type: integer
+        city:
+          type: string
+        address:
+          type: string
+        zipcode:
+          type: string
+        email:
+          type: string
+        id_number:
+          type: string
 
     # Announcements
     createAnnouncement:
