fixed docs type

--- a/src/server/services/swagger/components.yaml
+++ b/src/server/services/swagger/components.yaml
@@ -214,6 +214,6 @@ components:
           type: object
           properties:
             ex_order_position:
-              type: int
+              type: integer
         is_test:
           type: boolean
