feature: added admin endpoint for getting teams assigned to specific coach

--- a/src/server/services/swagger/parameters.yaml
+++ b/src/server/services/swagger/parameters.yaml
@@ -43,6 +43,13 @@ parameters:
     required: true
     type: integer
 
+  coachId:
+    name: coach_id
+    description: The internal identification number of a coach.
+    in: path
+    required: true
+    type: integer
+
   # Team
   teamIdQuery:
     name: team_id
