--- a/src/server/services/swagger/definitions.yaml
+++ b/src/server/services/swagger/definitions.yaml
@@ -667,6 +667,13 @@ definitions:
         example: 1
 
   # Errors
+  UserAssignedError:
+    type: object
+    properties:
+      error:
+        type: string
+        example: User assigned to team. Unassign him before trying to change role.
+
   NotAuthenticatedError:
     type: object
     properties:
