--- a/src/server/services/swagger/tags.yaml
+++ b/src/server/services/swagger/tags.yaml
@@ -14,4 +14,4 @@ tags:
   - name: Trainings
     description: Trainings and Tests management for ISRSA coaches.
   - name: Scores
-    description: Recorded scores of exercises from trainigns / tests.
+    description: Recorded scores of exercises from trainings / tests.
