fix: fixed seeds to include training id, fixed swagger to show correctly is_submitted schema

--- a/src/server/services/swagger/definitions.yaml
+++ b/src/server/services/swagger/definitions.yaml
@@ -667,6 +667,14 @@ definitions:
         example: 1
 
   # Scores
+
+  GetTrainingScoreSubmitted:
+    type: object
+    properties:
+      is_submitted:
+        type: boolean
+        example: true
+
   GetExScores:
     type: object
     properties:
