--- a/src/server/services/swagger/components.yaml
+++ b/src/server/services/swagger/components.yaml
@@ -224,6 +224,8 @@ components:
       items:
         type: object
         properties:
+          training_id:
+            type: integer
           exercise_id:
             type: integer
           time_duration:
@@ -237,6 +239,7 @@ components:
           is_test:
             type: string
         required:
+          - training_id
           - exercise_id
           - is_test
 
