moved protected endpoints to env var

--- a/src/config/env.example
+++ b/src/config/env.example
@@ -1,3 +1,33 @@
 NODE_PATH=src
 SESSION_SECRET=topsecret
 NOT_ASSIGNED_ROLE_ID=4
+ADMIN_COACH_PATHS=/users/role,/users/role/edit,/users/user_info,/videos/add,/videos/edit,/announcements/team,/announcements/add,/announcements/edit,/team/all,/team/coach,/team/assign,/team/unassign,/team/add,/team/edit,/exercises/add,/exercises/coach,/exercises/edit,/trainings/past/tests,/trainings/coach,/trainings/add,/scores/coach,/scores/edit
+#    // users
+#    "/users/role",
+#    "/users/role/edit",
+#    "/users/user_info",
+#    // videos
+#    "/videos/add",
+#    "/videos/edit",
+#    // announcements
+#    "/announcements/team",
+#    "/announcements/add",
+#    "/announcements/edit",
+#    // teams
+#    "/team/all",
+#    "/team/coach",
+#    "/team/assign",
+#    "/team/unassign",
+#    "/team/add",
+#    "/team/edit",
+#    // exercises
+#    "/exercises/add",
+#    "/exercises/coach",
+#    "/exercises/edit",
+#    // trainings
+#    "/trainings/past/tests",
+#    "/trainings/coach",
+#    "/trainings/add",
+#    // scores
+#    "/scores/coach",
+#    "/scores/edit"
