feature: added components to render guidance

--- a/src/server/services/swagger/definitions.yaml
+++ b/src/server/services/swagger/definitions.yaml
@@ -730,6 +730,13 @@ definitions:
         type: int
         example: 1
 
+  # Components
+  Components:
+    type: array
+    items:
+      type: string
+      example: "/home"
+
   # Errors
   UserAssignedError:
     type: object
