feature: added events support

--- a/src/config/env.example
+++ b/src/config/env.example
@@ -5,7 +5,7 @@ DB_CONNECTION_STRING=postgres://postgres:9095582@localhost:5432/postgres
 ADMIN_PATHS=/users/role
 #    // users
 #    "/users/role"
-ADMIN_COACH_PATHS=/users/user_info,/videos/add,/videos/edit,/announcements/team,/announcements/add,/announcements/edit,/team/all,/team/coach,/team/assign,/team/unassign,/team/add,/team/edit,/exercises/add,/exercises/coach,/exercises/edit,/trainings/past/tests,/trainings/coach,/trainings/add,/scores/coach,/scores/edit
+ADMIN_COACH_PATHS=/users/user_info,/videos/add,/videos/edit,/announcements/team,/announcements/add,/announcements/edit,/team/all,/team/coach,/team/assign,/team/unassign,/team/add,/team/edit,/exercises/add,/exercises/coach,/exercises/edit,/trainings/past/tests,/trainings/coach,/trainings/add,/scores/coach,/scores/edit,/events/team,/events/add,/events/edit
 #    // users
 #    "/users/user_info",
 #    // videos
@@ -33,3 +33,7 @@ ADMIN_COACH_PATHS=/users/user_info,/videos/add,/videos/edit,/announcements/team,
 #    // scores
 #    "/scores/coach",
 #    "/scores/edit"
+#    // events
+#    "/events/team",
+#    "/events/add",
+#    "/events/edit",
