feature: added  fully events support inc. swagger, full crud

--- a/src/server/services/swagger/components.yaml
+++ b/src/server/services/swagger/components.yaml
@@ -107,6 +107,34 @@ components:
         image_link:
           type: string
 
+    # Event
+    createEvent:
+      type: object
+      properties:
+        description:
+          type: string
+        location:
+          type: string
+        datetime:
+          type: string
+        team_id:
+          type: string
+      required:
+        - description
+        - datetime
+
+    updateEvent:
+      type: object
+      properties:
+        description:
+          type: string
+        location:
+          type: string
+        datetime:
+          type: string
+        team_id:
+          type: string
+
     # Videos
     addVideo:
       type: object
